v5/dsl-spec/07-resources.md
# 07 — Resources Definition（`kind: Resources`）

本文件定義 `kind: Resources` 的 YAML 結構。Resources 集中宣告共用資源：MCP servers、string templates、model aliases、toolsets。

Resources 中的 `toolsets` 併入了原 v3 獨立的 `kind: Toolset`。

---

## 頂層結構

```yaml
apiVersion: resource/v5
kind: Resources

metadata:
  name: shared-resources        # MUST — kebab-case
  version: 1
  description: "共用資源定義"

mcp_servers: { ... }            # MAY — MCP server 配置
string_templates: { ... }       # MAY — 可重用字串模板
model_aliases: { ... }          # MAY — model 語意化別名
toolsets: { ... }               # MAY — 具名的 tools + skills 集合（v3 的 kind: Toolset）
```

---

## mcp_servers

宣告外部 MCP server 的連線資訊。MCP server 啟動後，其 tools 會註冊進 task registry，命名空間為 server name。Agent / toolset 以 `<server_name>.<tool_name>` 或 `<server_name>.*` wildcard 引用。

```yaml
mcp_servers:
  github-mcp:
    transport: stdio                          # MUST — stdio | sse
    command: "npx -y @modelcontextprotocol/server-github"  # MUST (stdio)
    env:
      GITHUB_TOKEN: ${ secret.GITHUB_TOKEN }

  slack-mcp:
    transport: sse
    url: "https://mcp.slack.example.com/sse"  # MUST (sse)
    headers:
      Authorization: "Bearer ${ secret.SLACK_TOKEN }"

  compliance-mcp:
    transport: stdio
    command: "python -m compliance_mcp_server"
    config:
      timeout_seconds: 30
```

| 欄位 | 型別 | 說明 |
|------|------|------|
| `transport` | string | MUST — `stdio` 或 `sse` |
| `command` | string | stdio 時 MUST — 啟動命令 |
| `url` | string | sse 時 MUST — endpoint URL |
| `env` | map | MAY — 環境變數（支援 `${ }`） |
| `headers` | map | MAY — HTTP headers（sse；支援 `${ }`） |
| `config` | map | MAY — 額外設定（支援 `${ }`） |

`${ }` 求值上下文同 lifecycle init：僅 `secret` / `env` / `project` / `artifacts._workspace_path`；server 啟動於 workflow instance 首次需要其 tool 時（lazy），求值一次後快取。

---

## string_templates

可重用的字串模板，支援 `${ }` 變數替換，主要用於 prompt 組裝。

```yaml
string_templates:
  order_analysis_prompt:
    template: |
      你是訂單分析專家。
      當前訂單：${ input.order_id }
      客戶等級：${ vars.customer_tier }
    description: "訂單分析 prompt 模板"

  risk_warning:
    template: "訂單金額 ${ input.amount } 超過閾值"
```

在 agent 的 `system` 或 `prompt` 中引用：

```yaml
system: ${ templates.order_analysis_prompt }
```

---

## model_aliases

語意化的 LLM model 別名，與實際 provider/model 解耦。

```yaml
model_aliases:
  fast:
    provider: anthropic
    name: claude-haiku-4-5-20251001
    config:
      max_tokens: 4096
      temperature: 0.3

  smart:
    provider: anthropic
    name: claude-sonnet-4-20250514
    config:
      max_tokens: 8192

  reasoning:
    provider: openai
    name: o1
```

Agent definition 中以 alias 引用：

```yaml
model: fast
```

---

## toolsets

具名的 tools + skills 集合（v3 的 `kind: Toolset` 併入此處）。Agent definition 透過 toolset name 引用整組能力。

```yaml
toolsets:
  order-processing:
    description: "訂單處理工具集"
    tools:
      - order.load
      - order.update
      - compliance-mcp.check_sanctions_list   # MCP server 的 tool，以 <server>.<tool> 引用
    skills:
      - name: risk-analysis
      - name: compliance-review

  customer-management:
    description: "客戶管理工具集"
    tools:
      - customer.get_history
      - customer.update_tier

  full-order-suite:
    description: "完整訂單套件"
    includes:                    # 組合其他 toolset
      - order-processing
      - customer-management
    tools:                       # 額外 tools
      - agent.ask_human
```

### toolset 欄位

| 欄位 | 說明 |
|------|------|
| `description` | MAY — 說明 |
| `tools` | MAY — 與 agent `tools` 共用語法：字串簡寫或 `{action, name?, description?, input?}` 物件 |
| `skills` | MAY — skill 引用列表 |
| `includes` | MAY — 引用其他 toolset（遞迴展開，不可循環；循環於載入時偵測，錯誤碼 `toolset.circular_include`） |

### 在 Agent Definition 中引用

Toolset 的展開由引擎在載入時完成。Agent definition 以 `toolset.` 命名空間引用整組：

```yaml
# Agent Definition
tools:
  - "toolset.order-processing"        # 展開為此 toolset 的所有 tools + skills
```

或僅引用 toolset 下的特定 action（等價展開後再挑出）：

```yaml
tools:
  - "toolset.order-processing.order.load"
```

---

## 完整範例

```yaml
apiVersion: resource/v5
kind: Resources

metadata:
  name: order-resources
  version: 1
  description: "訂單領域共用資源"

mcp_servers:
  compliance-mcp:
    transport: stdio
    command: "python -m compliance_server"
    env:
      DB_URL: ${ secret.COMPLIANCE_DB_URL }

model_aliases:
  fast:
    provider: anthropic
    name: claude-haiku-4-5-20251001
    config: { max_tokens: 4096 }
  smart:
    provider: anthropic
    name: claude-sonnet-4-20250514

string_templates:
  order_system_prompt:
    template: |
      你是訂單處理助手。
      可用工具：order.load、order.update

toolsets:
  order-tools:
    tools:
      - order.load
      - order.update
      - "compliance-mcp.*"        # 引入該 MCP server 的全部 tools
    skills:
      - name: risk-analysis
```
